--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
 Aden
 <a href="https://aden0275.github.io/GameDev2024something/public/t1a0-basic.html">t1a01-basic.html</a>
 <a href="https://github.com/Aden0275/GameDev2024something">t1a01-basic.html</a>
+<a href="https://github.com/Aden0275/GameDev2024something/blob/main/public/puplic/index.html2">t1a01-basic.html</a>
