--- a/webcam-basic.html
+++ b/webcam-basic.html
@@ -1,3 +1,4 @@
+<a href="https://aden0275.github.io/GameDev2024something/bebcam-basic.html">t1a01-basic.html</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
