--- a/public/index.html
+++ b/public/index.html
@@ -2,3 +2,4 @@ Aden
 <li><a href="t1a0-basic.html">t1a01-basic.html</a> 
 <li><a href="webcam-basic.html">webcam-basic.html</a>
 
+<li><a href="html-game.basic">html-game.basic</a>
