--- a/public/t1a02-proper-Aden.html
+++ b/public/t1a02-proper-Aden.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html>
-   <head>
-
-
-   </head>
-   <body
-     <h1 align+center>
-   </body>
+<head>
+    <title>t1a02-proper-Aden</title>
+</head>
+<body>
+    <h1 align="center">t1a02-proper-Aden</h1>
+</body>
 </html>
