--- a/public/t1a02-proper-Aden.html
+++ b/public/t1a02-proper-Aden.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>t1a02-proper-Aden</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <script src="script.js" defer></script> <!-- Link to your JavaScript file -->
 </head>
 <body>
     <h1 align="center">t1a02-proper-Aden</h1>
