--- a/public/t1a02-proper-Aden.html
+++ b/public/t1a02-proper-Aden.html
@@ -6,6 +6,12 @@
     <title>t1a02-proper-Aden</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
     <script src="script.js" defer></script> <!-- Link to your JavaScript file -->
+    <style>
+        body {
+            background-color: blue; /* Set background color to blue */
+            color: white; /* Optional: Change text color for contrast */
+        }
+    </style>
 </head>
 <body>
     <h1 align="center">t1a02-proper-Aden</h1>
