--- a/public/index.html
+++ b/public/index.html
@@ -3,3 +3,4 @@ Aden
 <li><a href="webcam-basic.html">webcam-basic.html</a>
 <li><a href="t1a02-proper-Aden.html">t1a02-proper-Aden.html</a>
 <li><a href="html-clicker.idk">html-clicker.idk</a>
+<li><a href="html-button.wow">html-button.wow</a>
