--- a/public/index.html
+++ b/public/index.html
@@ -3,4 +3,4 @@ Aden
 <li><a href="webcam-basic.html">webcam-basic.html</a>
 <li><a href="t1a02-proper-Aden.html">t1a02-proper-Aden.html</a>
 <li><a href="html-clicker.idk">html-clicker.idk</a>
-
+<li><a href="t1a03-table-list-Aden.html">t1a03-table-list-Aden.html</a>
