--- a/public/index.html
+++ b/public/index.html
@@ -4,3 +4,21 @@ Aden
 <li><a href="t1a02-proper-Aden.html">t1a02-proper-Aden.html</a>
 <li><a href="html-clicker.idk">html-clicker.idk</a>
 <li><a href="t1a03-table-list-Aden.html">t1a03-table-list-Aden.html</a>
+<table border="1">
+  <tr>
+    <th>Header 1</th>
+    <th>Header 2</th>
+  </tr>
+  <tr>
+    <td><li><a href="t1a0-basic.html">t1a01-basic.html</a></td>
+    <td><li><a href="webcam-basic.html">webcam-basic.html</a></td>
+  </tr>
+  <tr>
+    <td><li><a href="t1a02-proper-Aden.html">t1a02-proper-Aden.html</a></td>
+    <td><li><a href="html-clicker.idk">html-clicker.idk</a></td>
+   </tr>
+  <tr>
+    <td><li><a href="t1a03-table-list-Aden.html">t1a03-table-list-Aden.html</a></td>
+    <td>Row 2, Cell 2</td>
+      </tr>
+</table>
