--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@ Aden
    </tr>
   <tr>
     <td><li><a href="t1a03-table-list-Aden.html">t1a03-table-list-Aden.html</a></td>
-    <td>Row 2, Cell 2</td>
+    <td>list-table-html-t1a03</td>
       </tr>
 </table>
