--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@ Aden
    </tr>
   <tr>
     <td><li><a href="t1a03-table-list-Aden.html">t1a03-table-list-Aden.html</a></td>
-    <td>list-table-html-t1a03</td>
+    <td><li><a href="list-table-html-t1a03">list-table-html-t1a03</a></td>
       </tr>
 </table>
