--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 Aden
 <table border="1">
   <tr>
-    <th>Header 1</th>
-    <th>Header 2</th>
+    <th>term assignments</th>
+    <th>x assignments</th>
   </tr>
   <tr>
     <td><li><a href="t1a0-basic.html">t1a01-basic.html</a></td>
