--- a/public/t1a03-table-list-Aden.html
+++ b/public/t1a03-table-list-Aden.html
@@ -56,9 +56,9 @@
 
 <h2>Unordered List</h2>
 <ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
+    <li>Dog</li>
+    <li>Kawala</li>
+    <li>turtle</li>
     <li>Item 4</li>
 </ul>
 
