--- a/public/index.html
+++ b/public/index.html
@@ -17,3 +17,44 @@ Aden
     <td><li><a href="list-table-html-t1a03">list-table-html-t1a03</a></td>
       </tr>
 </table>
+<h2>Unordered List</h2>
+<ul>
+    <li><li><a href="t1a0-basic.html">t1a01-basic.html</a>/li>
+    <li><a href="t1a02-proper-Aden.html">t1a02-proper-Aden.html</a></li>
+    <li><a href="t1a03-table-list-Aden.html">t1a03-table-list-Aden.html</a></li>
+    <li>Item 4</li>
+</ul>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Ordered List with Border</title>
+    <style>
+        ol {
+            border: 2px solid black; /* Border around the entire list */
+            padding: 10px; /* Space between the border and the list items */
+            list-style-position: inside; /* Position numbers inside the border */
+        }
+        li {
+            border: 1px solid gray; /* Border around each list item */
+            padding: 5px; /* Space inside each listed item */
+            margin: 5px 0; /* Space between each list item */
+        }
+    </style>
+</head>
+<body>
+
+<h2>Ordered List</h2>
+<ol>
+    <li><li><a href="webcam-basic.html">webcam-basic.html</a></li>
+    <li><li><a href="html-clicker.idk">html-clicker.idk</a></li>
+    <li>Third Item</li>
+    <li>Fourth Item</li>
+</ol>
+
+</body>
+</html>
