--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@ Aden
 <ol>
     <li><li><a href="webcam-basic.html">webcam-basic.html</a></li>
     <li><li><a href="html-clicker.idk">html-clicker.idk</a></li>
-    <li>Third Item</li>
-    <li>Fourth Item</li>
+    <li><li><a href="list-table-html-t1a03">list-table-html-t1a03</a></li>
+    <li></li>
 </ol>
 
 </body>
