--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@ Aden
 </table>
 <h2>Unordered List</h2>
 <ul>
-    <li><li><a href="t1a0-basic.html">t1a01-basic.html</a>/li>
+    <li><a href="t1a0-basic.html">t1a01-basic.html</a>/li>
     <li><a href="t1a02-proper-Aden.html">t1a02-proper-Aden.html</a></li>
     <li><a href="t1a03-table-list-Aden.html">t1a03-table-list-Aden.html</a></li>
     <li>Item 4</li>
