--- a/public/index.html
+++ b/public/index.html
@@ -26,30 +26,32 @@ Aden
 </ul>
 
 </body>
-</html>
+</html></ul>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Ordered List with Border</title>
+    <title>Simple ordered List with Border</title>
     <style>
-        ol {
+        ul {
             border: 2px solid black; /* Border around the entire list */
-            list-style-position: inside; /* Position numbers inside the border */
-         
+            padding: 10px; /* Space between the border and the list items */
+             list-style-position: inside; /* Position numbers inside the border */
+        }
+        li {
+            border: 1px solid gray; /* Border around each list item */
+            padding: 5px; /* Space inside each listed item */
+            margin: 5px 0; /* Space between each list item */
         }
     </style>
 </head>
 <body>
-
-<h2>Ordered List</h2>
-<ol>
-    <li><li><a href="webcam-basic.html">webcam-basic.html</a></li>
+  <h2>ordered List</h2>
+<ul>
+     <li><li><a href="webcam-basic.html">webcam-basic.html</a></li>
     <li><li><a href="html-clicker.idk">html-clicker.idk</a></li>
     <li><li><a href="list-table-html-t1a03">list-table-html-t1a03</a></li>
     <li></li>
-</ol>
-
-</body>
-</html>
+</ul>
