--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,12 @@ Aden
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple ordered List with Border</title>
+    <title>Simple Ordered List with Border</title>
     <style>
-        ul {
+        ol {
             border: 2px solid black; /* Border around the entire list */
             padding: 10px; /* Space between the border and the list items */
-             list-style-position: inside; /* Position numbers inside the border */
+            list-style-position: inside; /* Position numbers inside the border */
         }
         li {
             border: 1px solid gray; /* Border around each list item */
