--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,9 @@ Aden
     </style>
 </head>
 <body>
-  <h2>ordered List</h2>
-<ul>
+
+<h2>Ordered List</h2>
+<ol>
      <li><li><a href="webcam-basic.html">webcam-basic.html</a></li>
     <li><li><a href="html-clicker.idk">html-clicker.idk</a></li>
     <li><li><a href="list-table-html-t1a03">list-table-html-t1a03</a></li>
