--- a/public/index.html
+++ b/public/index.html
@@ -40,3 +40,22 @@ Aden
  <li><li><a href="list-table-html-t1a03">list-table-html-t1a03</a></li>
   <li></li>
 </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gray Background</title>
+    <style>
+        body {
+            background-color: gray; /* Set the background color to gray */
+            color: white; /* Optional: to make text readable */
+            font-family: Arial, sans-serif; /* Optional: set a font */
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to My Webpage!</h1>
+    <p>This is a simple webpage with a gray background.</p>
+</body>
+</html>
