--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 Aden
    <a href="https://github.com/Aden0275/GameDev2024something/tree/main">https://github.com/Aden0275/GameDev2024something/tree/main</a>
 </table>
-<h2>Unordered List</h2>
+<h2>term assignments</h2>
 <ul>
     <li><a href="t1a0-basic.html">t1a01-basic.html</a><li>
     <li><a href="t1a02-proper-Aden.html">t1a02-proper-Aden.html</a></li>
@@ -33,7 +33,7 @@ Aden
 </head>
 <body>
 
-<h2>Ordered List</h2>
+<h2>x assignments</h2>
 <ol>
 <li><li><a href="webcam-basic.html">webcam-basic.html</a></li>
   <li><li><a href="html-clicker.idk">html-clicker.idk</a></li>
