--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@ Aden
     <title>Gray Background</title>
     <style>
         body {
-            background-color: gray; /* Set the background color to gray */
+            background-color: gray; /* Set the background color to light blue */
             color: white; /* Optional: to make text readable */
             font-family: Arial, sans-serif; /* Optional: set a font */
         }
