--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@ Aden
     <style>
         body {
             background-color: gray; /* Set the background color to light blue */
-            color: white; /* Optional: to make text readable */
+            color: black; /* Optional: to make text readable */
             font-family: Arial, sans-serif; /* Optional: set a font */
         }
     </style>
