--- a/public/index.html
+++ b/public/index.html
@@ -45,14 +45,11 @@ Aden
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gray Background</title>
+    <title>Light Blue Background</title>
     <style>
         body {
-            background-color: light blue; /* Set the background color to light blue */
-            color: black; /* Optional: to make text readable */
-            font-family: Arial, sans-serif; /* Optional: set a font */
+            background-color: #ADD8E6; /* Light blue color */
         }
     </style>
 </head>
 <body>
-    
