--- a/public/t1a04-forms-Aden.html
+++ b/public/t1a04-forms-Aden.html
@@ -5,6 +5,10 @@ working on it
   Name:<input type="text" id="name" value"Aden"><br>
   Password:<input type="password" id="password" value="IDK"><br><br>
   Number: <input type=number value=16><br>
+   <label for="email">Email:</label> <input type="email" id="email" name="email" required>
+
+
+
   
 <!DOCTYPE html>
 <html lang="en">
