--- a/public/t1a04-forms-Aden.html
+++ b/public/t1a04-forms-Aden.html
@@ -6,7 +6,7 @@ working on it
   Name:<input type="text" id="name" value"Aden"><br>
   Password:<input type="password" id="password" value="IDK"><br><br>
   Number: <input type=number value=16><br>
- 
+   <label for="message">Message:</label> <textarea id="message" name="message" rows="5" required></textarea>
 
   
 <!DOCTYPE html>
