--- a/public/t1a04-forms-Aden.html
+++ b/public/t1a04-forms-Aden.html
@@ -6,8 +6,17 @@ working on it
   Name:<input type="text" id="name" value"Aden"><br>
   Password:<input type="password" id="password" value="IDK"><br><br>
   Number: <input type=number value=16><br>
-   <label for="message">Message:</label> <textarea id="message" name="message" rows="5" required></textarea>
+   Radio buttons:<br>
+   <input type="radio" name="myrad" value="red" >red<br>
+    <input type="radio" name="myrad" value="blue" >blue<br>
+     <br><br>
+Checkboxes: <br> 
+   <input type="checkbox" value="cat">Cat<br>
+  <input type="checkbox" value="Dog">Dog<br>
 
+   
+   <label for="message">Message:</label> <textarea id="message" name="message" rows="5" required></textarea>
+   
   
 <!DOCTYPE html>
 <html lang="en">
