--- a/public/t1a04-forms-Aden.html
+++ b/public/t1a04-forms-Aden.html
@@ -6,13 +6,15 @@ working on it
   Name:<input type="text" id="name" value"Aden"><br>
   Password:<input type="password" id="password" value="IDK"><br><br>
   Number: <input type=number value=16><br>
-   Radio buttons:<br>
+   what colour do you like mosts:<br>
     <input type="radio" name="myrad" value="red">red<br>
     <input type="radio" name="myrad" value="blue">blue<br>
+    <input type="radio" name="myrad" value="yellow">yellow<br>
     <br><br>
-Checkboxes: <br> 
+what animal do you like most: <br> 
    <input type="checkbox" value="cat">Cat<br>
    <input type="checkbox" value="Dog">Dog<br>
+   <input type="checkbox" value="bird">Bird<br>
     <br><br>
    
    <label for="message">Message:</label> <textarea id="message" name="message" rows="5" required></textarea>
