--- a/public/t1a04-forms-Aden.html
+++ b/public/t1a04-forms-Aden.html
@@ -5,7 +5,7 @@ working on it
    <label for="email">Email:</label> <input type="email" id="email" name="email" required>
   Name:<input type="text" id="name" value"Aden"><br>
   Password:<input type="password" id="password" value="IDK"><br><br>
-  Number: <input type=number value=16><br>
+  Age: <input type=number value=16><br>
    what colour do you like mosts:<br>
     <input type="radio" name="myrad" value="red">red<br>
     <input type="radio" name="myrad" value="blue">blue<br>
