--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@ Aden
 <li><li><a href="webcam-basic.html">webcam-basic.html</a></li>
   <li><li><a href="html-clicker.idk">html-clicker.idk</a></li>
  <li><li><a href="list-table-html-t1a03">list-table-html-t1a03</a></li>
-  <li></li>
+  <li><a href="timer-time">timer-time</a></li>
 </ul>
 <!DOCTYPE html>
 <html lang="en">
