--- a/public/t1a05-css-Aden.html
+++ b/public/t1a05-css-Aden.html
@@ -1,2 +1,4 @@
-<a href=""></a>
-<i style="border-style:groove;">something idk</i>
+<h1 align=cemter>t1a05-css-Aden.html</h1>
+<a href="https://www.w3schools.com/Css/">https://www.w3schools.com/Css/</a>
+this is <i style="border-style:groove;">something idk</i>
+this is <b style="color:blue; background-color:black;":>wow</b> Yes!<br>
