--- a/public/t1a05-css-Aden.html
+++ b/public/t1a05-css-Aden.html
@@ -1,5 +1,6 @@
 <h1 align=cemter>t1a05-css-Aden.html</h1>
 <a href="https://www.w3schools.com/Css/">w3schools css</a><br><br> 
+this is <b>bold</> True?<br>
 this is <b style="color:blue; background-color:black;":>wow</b> Yes!<br><br>
 this is <i style="border-style:groove;">something idk</i>
 
