--- a/public/t1a05-css-Aden.html
+++ b/public/t1a05-css-Aden.html
@@ -2,6 +2,6 @@
 <a href="https://www.w3schools.com/Css/">w3schools css</a><br><br> 
 this is <b>bold</> True?<br>
 this is <b style="color:blue; background-color:black;":>wow</b> Yes!<br><br>
-this is <i style="border-style:groove;">something idk</i>
-this is <h1 style="font-size:10vw">cool</h1>
+this is <i style="border-style:groove;">something idk</i><br><br>
+this is <h1 style="font-size:10vw">cool</h1><br><br>
 
