--- a/public/t1a05-css-Aden.html
+++ b/public/t1a05-css-Aden.html
@@ -3,7 +3,30 @@
 this is <b>bold</> True?<br>
 this is <b style="color:blue; background-color:black;":>wow</b> Yes!<br><br>
 this is <i style="border-style:groove;">something idk</i><br><br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Color Change Example</title>
+    <style>
+        .color-blue { color: blue; }
+        .color-red { color: red; }
+        .color-green { color: green; }
+        .color-yellow { color: yellow; }
+    </style>
+</head>
+<body>
+    <h1 class="color-blue">Fantastic</h1>
+    <h1 class="color-red">Fantastic</h1>
+    <h1 class="color-green">Fantastic</h1>
+    <h1 class="color-yellow">Fantastic</h1>
+</body>
+</html>
 
+
+
+  
   
   this is <h1 style="font-size:10vw">cool</h1><br><br>
 
