--- a/public/t1a05-css-Aden.html
+++ b/public/t1a05-css-Aden.html
@@ -3,7 +3,7 @@
 this is <b>bold</> True?<br>
 this is <b style="color:blue; background-color:black;":>wow</b> Yes!<br><br>
 this is <i style="border-style:groove;">something idk</i><br><br>
-<!DOCTYPE html>
+This is <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -32,7 +32,7 @@ this is <i style="border-style:groove;">something idk</i><br><br>
     </style>
 </head>
 <body>
-    <div class="color-changing">Change my color!</div>
+    <div class="color-changing">Fantastic!</div>
 </body>
 </html>
 
