--- a/public/t1a05-css-Aden.html
+++ b/public/t1a05-css-Aden.html
@@ -68,7 +68,7 @@ This is <!DOCTYPE html>
     </style>
 </head>
 <body>
-    <div class="barrel-roll">this is turing</div>
+    <div class="barrel-roll">this is turning</div>
 </body>
 </html>
 
