--- a/public/t1a05-css-Aden.html
+++ b/public/t1a05-css-Aden.html
@@ -54,7 +54,7 @@ This is <!DOCTYPE html>
 
         .barrel-roll {
             font-size: 3em; /* Adjust size as necessary */
-            color: white;
+            color: Black;
             animation: barrelRoll 2s infinite; /* Animation name, duration, and infinite loop */
         }
 
@@ -75,6 +75,6 @@ This is <!DOCTYPE html>
 
   
   
-<h1 style="font-size:10vw">this is cool</h1><br><br>
+<h1 style="font-size:5vw">this is cool</h1><br><br>
 </h1>
 
