--- a/public/t1a05-css-Aden.html
+++ b/public/t1a05-css-Aden.html
@@ -47,14 +47,14 @@ This is <!DOCTYPE html>
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #282c34;
+            background-color: white;
             margin: 0;
             font-family: Arial, sans-serif;
         }
 
         .barrel-roll {
             font-size: 3em; /* Adjust size as necessary */
-            color: Black;
+            color: black;
             animation: barrelRoll 2s infinite; /* Animation name, duration, and infinite loop */
         }
 
