--- a/public/t1a06-in-out-Aden.html
+++ b/public/t1a06-in-out-Aden.html
@@ -1,6 +1,7 @@
 <h1 align=cemter>t1a06-in-out-Aden.html</h1>
-Input:<input type=text id="myFirtsName" value="Aden"
-        <input type=button value='Show on page" onclick="{ // this is a comment
+Input:<input type=text id="myFirtsName" value="Aden"> 
+        <input type=button value='Show on page" onclick="{ 
+                // this is a comment
               document.getElementById('myDiv01').innerHTML = 'your name is '+ 
 document.getElementById('myFirstName').value}">
         <div id="myDiv01">...</div>
