--- a/public/t1a06-in-out-Aden.html
+++ b/public/t1a06-in-out-Aden.html
@@ -3,5 +3,6 @@ Input:<input type=text id="myFirtsName" value="Aden">
         <input type=button value="Show on page" onclick="{ 
                 // this is a comment
               document.getElementById('myDiv01').innerHTML = 'your name is '+ 
-document.getElementById('myFirstName').value}">
+document.getElementById('myFirstName').value
+        }">
         <div id="myDiv01">...</div>
