--- a/public/t1a06-in-out-Aden.html
+++ b/public/t1a06-in-out-Aden.html
@@ -6,3 +6,63 @@ Input:<input type=text id="myFirtsName" value="Aden">
 document.getElementById('myFirstName').value
         }">
         <div id="myDiv01">...</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Show Name Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 50px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        input[type="text"] {
+            padding: 10px;
+            margin: 10px 0;
+            font-size: 16px;
+        }
+        input[type="button"] {
+            padding: 10px 15px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+        input[type="button"]:hover {
+            background-color: #0056b3;
+        }
+        #myDiv01 {
+            margin-top: 20px;
+            font-size: 18px;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>t1a06-in-out-Aden.html</h1>
+    
+    <input type="text" id="myFirstName" value="Aden" placeholder="Enter your name"> 
+    <input type="button" value="Show on page" onclick="showName()">
+
+    <div id="myDiv01">...</div>
+
+    <script>
+        function showName() {
+            const name = document.getElementById('myFirstName').value;
+            document.getElementById('myDiv01').innerHTML = 'Your name is: ' + name;
+        }
+    </script>
+
+</body>
+</html>
