--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@ Aden
     <li><a href="t1a04-forms-Aden.html">t1a04-forms-Aden.html</a></li>
    <li><a href="t1a05-css-Aden.html">t1a05-css-Aden.html</a></li> 
     <li><a href="t1a06-in-out-Aden.html">t1a06-in-out-Aden.html</a></li> 
+    <li><a href="t1a07-functions-Aden.html">t1a07-functions-Aden.html</a></li> 
 </ul>
 
 </body>
