--- a/public/t1a07-functions-fred.html
+++ b/public/t1a07-functions-fred.html
@@ -1,51 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Function Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
-        input, button {
-            margin: 5px;
-            padding: 8px;
-        }
-    </style>
-</head>
-<body>
-
-<h1>Simple Function Page</h1>
-<p>This page contains a simple function that adds two numbers.</p>
-
-<label for="num1">Number 1:</label>
-<input type="number" id="num1" placeholder="Enter first number">
-<br>
-<label for="num2">Number 2:</label>
-<input type="number" id="num2" placeholder="Enter second number">
-<br>
-<button id="addButton">Add Numbers</button>
-
-<h2>Result: <span id="result"></span></h2>
-
+<h1 align=cemter>t1a07-functions-Aden.html</h1>
 <script>
-    // Simple function to add two numbers
-    function addNumbers(a, b) {
-        return a + b;
+    function myVar(myIn){
+        return document.getElementById(myIn)
     }
-
-    // Event listener for the button
-    document.getElementById('addButton').addEventListener('click', function() {
-        const number1 = parseFloat(document.getElementById('num1').value);
-        const number2 = parseFloat(document.getElementById('num2').value);
-        
-        // Call the addNumbers function and display the result
-        const sum = addNumbers(number1, number2);
-        document.getElementById('result').textContent = sum;
-    });
 </script>
 
-</body>
-</html>
+Input:<input type=text id="myFirtsName" value="Aden"> 
+        <input type=button value="Show on page" onclick="{ 
+             myVar('myDiv01').innerHTML='your name is '+ myVar('myFirstName').value
+        }">
+        <div id="myDiv01">...</div>
