--- a/public/t1a07-functions-Aden.html
+++ b/public/t1a07-functions-Aden.html
@@ -10,3 +10,40 @@ Input:<input type=text id="myFirtsName" value="Aden">
              myVar('myDiv01').innerHTML='your name is '+ myVar('myFirstName').value
         }">
         <div id="myDiv01">...</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Show Name Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+
+<h1>t1a07-functions-Aden.html</h1>
+
+<script>
+    function getElementById(id) {
+        return document.getElementById(id);
+    }
+
+    function showName() {
+        const firstName = getElementById('myFirstName').value;
+        getElementById('myDiv01').innerHTML = 'Your name is ' + firstName;
+    }
+</script>
+
+<label for="myFirstName">Input your first name:</label>
+<input type="text" id="myFirstName" value="Aden">
+<input type="button" value="Show on page" onclick="showName()">
+
+<div id="myDiv01">...</div>
+
+</body>
+</html>
