--- a/public/t1a07-functions-Aden.html
+++ b/public/t1a07-functions-Aden.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE html>
+<h1 align=cemter><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -77,7 +76,4 @@
     function displayGreeting() {
         document.getElementById("greetingMessage").innerText = "Hello, User! Welcome to the site!";
     }
-</script>
-
-</body>
-</html>
+</script></h1>
