--- a/public/t1a07-functions-Aden.html
+++ b/public/t1a07-functions-Aden.html
@@ -67,7 +67,7 @@
 <body>
 
 <div class="container">
-    <h1>Welcome to My Simple Function Page</h1>
+    <h1>Hello welcome</h1>
     <button onclick="displayGreeting()">Click Me!</button>
     <p id="greetingMessage" style="margin-top: 20px;"></p>
 </div>
