--- a/public/t1a07-functions-Aden.html
+++ b/public/t1a07-functions-Aden.html
@@ -74,6 +74,6 @@
 
 <script>
     function displayGreeting() {
-        document.getElementById("greetingMessage").innerText = "Hello, User! Welcome to the site!";
+        document.getElementById("greetingMessage").innerText = "Hello, User!";
     }
 </script></h1>
