--- a/public/t1a07-functions-Aden.html
+++ b/public/t1a07-functions-Aden.html
@@ -124,4 +124,77 @@
 </script>
 
 </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Number Guessing Game</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+        .container {
+            text-align: center;
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        input {
+            padding: 10px;
+            font-size: 16px;
+            margin-top: 10px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            margin-top: 10px;
+            cursor: pointer;
+        }
+        p {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <h1>Guess the Number!</h1>
+    <p>I'm thinking of a number between 1 and 100</p>
+    <input type="number" id="guessInput" placeholder="Enter your guess" />
+    <button onclick="checkGuess()">Guess!</button>
+    <p id="resultMessage"></p>
+</div>
+
+<script>
+    const randomNumber = Math.floor(Math.random() * 100) + 1; // Random number between 1 and 100
+    console.log(randomNumber); // For debugging purposes; you can remove this line later.
+
+    function checkGuess() {
+        const userGuess = parseInt(document.getElementById("guessInput").value);
+        const resultElement = document.getElementById("resultMessage");
+
+        if (isNaN(userGuess)) {
+            resultElement.innerText = "Please enter a valid number.";
+        } else if (userGuess < 1 || userGuess > 100) {
+            resultElement.innerText = "Your guess must be between 1 and 100.";
+        } else if (userGuess < randomNumber) {
+            resultElement.innerText = "Too low! Try again.";
+        } else if (userGuess > randomNumber) {
+            resultElement.innerText = "Too high! Try again.";
+        } else {
+            resultElement.innerText = "Congratulations! You guessed the number!";
+        }
+    }
+</script>
+
+</body>
 </html></h1>
