--- a/public/t1a07-functions-Aden.html
+++ b/public/t1a07-functions-Aden.html
@@ -197,4 +197,113 @@
 </script>
 
 </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-Do List Application</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+        .container {
+            text-align: center;
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+        input {
+            padding: 10px;
+            width: 70%;
+            font-size: 16px;
+            margin-top: 10px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            margin-top: 10px;
+            cursor: pointer;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+            text-align: left;
+            margin: 20px 0;
+        }
+        li {
+            padding: 8px;
+            margin: 5px 0;
+            background-color: #e1ffe1;
+            border-radius: 5px;
+            position: relative;
+        }
+        .complete {
+            text-decoration: line-through;
+            background-color: #d1ffd1;
+        }
+        .remove {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: red;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <h1>To-Do List</h1>
+    <input type="text" id="taskInput" placeholder="Add a new task" />
+    <button onclick="addTask()">Add Task</button>
+    <ul id="taskList"></ul>
+</div>
+
+<script>
+    function addTask() {
+        const taskInput = document.getElementById("taskInput");
+        const taskValue = taskInput.value.trim();
+        const taskList = document.getElementById("taskList");
+
+        if (taskValue === "") {
+            alert("Please enter a task.");
+            return;
+        }
+
+        const li = document.createElement("li");
+        li.textContent = taskValue;
+        li.onclick = () => {
+            li.classList.toggle("complete");
+        };
+
+        const removeButton = document.createElement("button");
+        removeButton.textContent = "X";
+        removeButton.className = "remove";
+        removeButton.onclick = (event) => {
+            event.stopPropagation(); // Prevent triggering the 'complete' toggle on the parent li
+            taskList.removeChild(li);
+        };
+
+        li.appendChild(removeButton);
+        taskList.appendChild(li);
+        taskInput.value = ""; // Clear the input box
+        taskInput.focus(); // Focus back to input
+    }
+</script>
+
+</body>
 </html></h1>
