--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@ Aden
   <li><li><a href="html-clicker.idk">html-clicker.idk</a></li>
  <li><li><a href="list-table-html-t1a03">list-table-html-t1a03</a></li>
   <li><a href="timer-time">timer-time</a></li>
+    <li><a href="snake-html">snake-html</a></li>
 </ul>
 <!DOCTYPE html>
 <html lang="en">
