--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@ Aden
     <li><a href="t1a06-in-out-Aden.html">t1a06-in-out-Aden.html</a></li> 
     <li><a href="t1a07-functions-Aden.html">t1a07-functions-Aden.html</a></li> 
      <li><a href="t1a08-variables-Aden.html">t1a08-variables-Aden.html</a></li>
+    <li><a href="t1a09-decision-if-Aden-html">t1a09-decision-if-Aden-html</a></li>
 </ul>
 
 </body>
