--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@ Aden
     <li><a href="t1a06-in-out-Aden.html">t1a06-in-out-Aden.html</a></li> 
     <li><a href="t1a07-functions-Aden.html">t1a07-functions-Aden.html</a></li> 
      <li><a href="t1a08-variables-Aden.html">t1a08-variables-Aden.html</a></li>
-    <li><a href="t1a09-decision-if-Aden-html">t1a09-decision-if-Aden-html</a></li>
+    <li><a href="t1a09-decision-if-Aden.html">t1a09-decision-if-Aden.html</a></li>
 </ul>
 
 </body>
@@ -41,9 +41,9 @@ Aden
 <ol>
 <li><li><a href="webcam-basic.html">webcam-basic.html</a></li>
   <li><li><a href="html-clicker.idk">html-clicker.idk</a></li>
- <li><li><a href="list-table-html-t1a03">list-table-html-t1a03</a></li>
-  <li><a href="timer-time">timer-time</a></li>
-    <li><a href="snake-html">snake-html</a></li>
+ <li><li><a href="list-table.html-t1a03">list-table-html-t1a03</a></li>
+  <li><a href="timer.time">timer-time</a></li>
+    <li><a href="snake.html">snake-html</a></li>
 </ul>
 <!DOCTYPE html>
 <html lang="en">
