--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@ Aden
 <ol>
 <li><li><a href="webcam-basic.html">webcam-basic.html</a></li>
   <li><li><a href="html-clicker.idk">html-clicker.idk</a></li>
- <li><li><a href="list-table.html-t1a03">list-table-html-t1a03</a></li>
+ <li><li><a href="list-table.html-t1a03">list-table.html</a></li>
   <li><a href="timer.time">timer-time</a></li>
     <li><a href="snake.html">snake-html</a></li>
 </ul>
