--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,10 @@ Aden
 <h2>x assignments</h2>
 <ol>
 <li><li><a href="webcam-basic.html">webcam-basic.html</a></li>
-  <li><li><a href="html-clicker.idk">html-clicker.idk</a></li>
- <li><li><a href="list-table.html-t1a03">list-table.html</a></li>
-  <li><a href="timer.time">timer-time</a></li>
-    <li><a href="snake.html">snake-html</a></li>
+  <li><li><a href="html-clicker.html">html-clicker.html</a></li>
+ <li><li><a href="list-table.html">list-table.html</a></li>
+  <li><a href="timer-time.html">timer-time.html</a></li>
+    <li><a href="snake.html">snake.html</a></li>
 </ul>
 <!DOCTYPE html>
 <html lang="en">
