--- a/public/index.html
+++ b/public/index.html
@@ -58,3 +58,70 @@ Aden
     </style>
 </head>
 <body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assignments Overview</title>
+    <style>
+        body {
+            background-color: #ADD8E6; /* Light blue background */
+            font-family: Arial, sans-serif; /* Arial font for the body */
+            padding: 20px; /* Padding around body content */
+        }
+
+        h2 {
+            color: #333; /* Dark grey color for headings */
+        }
+
+        ul, ol {
+            border: 2px solid black; /* Border around the list */
+            padding: 10px; /* Space between the border and list items */
+            list-style-position: inside; /* Position numbers inside the border */
+            margin-bottom: 20px; /* Space below the lists */
+        }
+
+        li {
+            border: 1px solid gray; /* Border around each list item */
+            padding: 5px; /* Space inside each list item */
+            margin: 5px 0; /* Space between each list item */
+        }
+
+        a {
+            text-decoration: none; /* Remove underline from links */
+            color: #007BFF; /* Bright blue color for links */
+        }
+
+        a:hover {
+            text-decoration: underline; /* Underline on hover */
+        }
+    </style>
+</head>
+
+<body>
+    <h2>Term Assignments</h2>
+    <ul>
+        <li><a href="t1a0-basic.html">t1a01-basic.html</a></li>
+        <li><a href="t1a02-proper-Aden.html">t1a02-proper-Aden.html</a></li>
+        <li><a href="t1a03-table-list-Aden.html">t1a03-table-list-Aden.html</a></li>
+        <li><a href="t1a04-forms-Aden.html">t1a04-forms-Aden.html</a></li>
+        <li><a href="t1a05-css-Aden.html">t1a05-css-Aden.html</a></li>
+        <li><a href="t1a06-in-out-Aden.html">t1a06-in-out-Aden.html</a></li>
+        <li><a href="t1a07-functions-Aden.html">t1a07-functions-Aden.html</a></li>
+        <li><a href="t1a08-variables-Aden.html">t1a08-variables-Aden.html</a></li>
+        <li><a href="t1a09-decision-if-Aden.html">t1a09-decision-if-Aden.html</a></li>
+    </ul>
+
+    <h2>X Assignments</h2>
+    <ol>
+        <li><a href="webcam-basic.html">webcam-basic.html</a></li>
+        <li><a href="html-clicker.html">html-clicker.html</a></li>
+        <li><a href="list-table.html">list-table.html</a></li>
+        <li><a href="timer-time.html">timer-time.html</a></li>
+        <li><a href="snake.html">snake.html</a></li>
+    </ol>
+</body>
+
+</html>
