--- a/public/t1a09-decision-if-Aden.html
+++ b/public/t1a09-decision-if-Aden.html
@@ -1,6 +1,5 @@
 <h1 align=cemter>t1a09-decision-if-Aden-html</h1>
-
-<!DOCTYPE html>
+<h1 align=cemter><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -96,3 +95,6 @@ Input:<input type="number" id="myNum1" value="14"><br>
 
 </body>
 </html>
+</h1>
+
+
