--- a/public/t1a09-decision-if-Aden.html
+++ b/public/t1a09-decision-if-Aden.html
@@ -1,5 +1,5 @@
-<h1 align=cemter>t1a09-decision-if-Aden-html</h1>
-<h1 align=cemter><!DOCTYPE html>
+<h1 align=center>t1a09-decision-if-Aden-html</h1>
+<h1 align=center><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
