--- a/public/t1a09-decision-if-Aden.html
+++ b/public/t1a09-decision-if-Aden.html
@@ -30,13 +30,13 @@ Input:<input type="number" id="myNum1" value="14"><br>
     }
 }"><br>
 
-<input type="button" value="Is Not Aden" onclick="{
+<input type="button" value="Is Jeff" onclick="{
     let myIn1 = document.getElementById('myText1').value;
     document.getElementById('myDiv01').innerHTML = '<br>';
     if (myIn1 !== 'Aden') {
         document.getElementById('myDiv01').innerHTML = 'You are not Aden!';
     } else {
-        document.getElementById('myDiv01').innerHTML = 'Hello Aden!';
+        document.getElementById('myDiv01').innerHTML = 'Hello Jeff!';
     }
 }"><br>
 
