--- a/public/t1a09-decision-if-Aden.html
+++ b/public/t1a09-decision-if-Aden.html
@@ -34,7 +34,7 @@ Input:<input type="number" id="myNum1" value="14"><br>
     let myIn1 = document.getElementById('myText1').value;
     document.getElementById('myDiv01').innerHTML = '<br>';
     if (myIn1 !== 'Aden') {
-        document.getElementById('myDiv01').innerHTML = 'You are not Aden!';
+        document.getElementById('myDiv01').innerHTML = 'You are not Jeff!';
     } else {
         document.getElementById('myDiv01').innerHTML = 'Hello Jeff!';
     }
