--- a/public/t1a09-decision-if-Aden.html
+++ b/public/t1a09-decision-if-Aden.html
@@ -33,7 +33,7 @@ Input:<input type="number" id="myNum1" value="14"><br>
 <input type="button" value="Is Jeff" onclick="{
     let myIn1 = document.getElementById('myText1').value;
     document.getElementById('myDiv01').innerHTML = '<br>';
-    if (myIn1 !== 'Aden') {
+    if (myIn1 !== 'Jeff') {
         document.getElementById('myDiv01').innerHTML = 'You are not Jeff!';
     } else {
         document.getElementById('myDiv01').innerHTML = 'Hello Jeff!';
