--- a/public/t1a09-decision-if-Aden.html
+++ b/public/t1a09-decision-if-Aden.html
@@ -81,15 +81,13 @@ Input:<input type="number" id="myNum1" value="14"><br>
         document.getElementById('myDiv01').innerHTML = 'The number is greater than 20!';
     }
 }"><br>
-
 <input type="button" value="???" onclick="{
     let myIn1 = document.getElementById('myText1').value;
-    let myNum1 = document.getElementById('myNum1').value;
     document.getElementById('myDiv01').innerHTML = '<br>';
-   if (myIn1 !== 'Luke') { {
-        document.getElementById('myDiv01').innerHTML = 'Condition not satisfied!';
+    if (myIn1 == 'Luke') {
+        document.getElementById('myDiv01').innerHTML = 'Conditions not met';
     } else {
-        document.getElementById('myDiv01').innerHTML = '<a href="Luke i am your father">';
+        document.getElementById('myDiv01').innerHTML = 'Luke i am your father>:';
     }
 }"><br>
 
