--- a/public/t1a09-decision-if-Aden.html
+++ b/public/t1a09-decision-if-Aden.html
@@ -87,7 +87,7 @@ Input:<input type="number" id="myNum1" value="14"><br>
     if (myIn1 == 'Luke') {
         document.getElementById('myDiv01').innerHTML = 'Conditions not met';
     } else {
-        document.getElementById('myDiv01').innerHTML = 'Luke i am your father>:';
+        document.getElementById('myDiv01').innerHTML = 'Luke i am your father';
     }
 }"><br>
 
