--- a/public/t1a09-decision-if-Aden.html
+++ b/public/t1a09-decision-if-Aden.html
@@ -84,10 +84,10 @@ Input:<input type="number" id="myNum1" value="14"><br>
 <input type="button" value="???" onclick="{
     let myIn1 = document.getElementById('myText1').value;
     document.getElementById('myDiv01').innerHTML = '<br>';
-    if (myIn1 == 'Luke') {
-        document.getElementById('myDiv01').innerHTML = 'Conditions not met';
+    if (myIn1 !== 'Luke') {
+        document.getElementById('myDiv01').innerHTML = 'conditions not met!';
     } else {
-        document.getElementById('myDiv01').innerHTML = 'Luke i am your father';
+        document.getElementById('myDiv01').innerHTML = 'Luke i am your father!';
     }
 }"><br>
 
