--- a/public/t1a09-decision-if-Aden.html
+++ b/public/t1a09-decision-if-Aden.html
@@ -97,7 +97,7 @@ Input:<input type="number" id="myNum1" value="14"><br>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Change Function Page</title>
+    <title>Color Change</title>
     <style>
         body {
             font-family: Arial, sans-serif;
