--- a/public/t1a09-decision-if-Aden.html
+++ b/public/t1a09-decision-if-Aden.html
@@ -124,7 +124,7 @@ Input:<input type="number" id="myNum1" value="14"><br>
 <body>
 
 <div class="container">
-    <h1>Color Change Function Page</h1>
+    <h1>Color Change</h1>
     <button onclick="changeBackgroundColor()">Change Background Color</button>
 </div>
 
