--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@ Aden
         <li><a href="list-table.html">list-table.html</a></li>
         <li><a href="timer-time.html">timer-time.html</a></li>
         <li><a href="snake.html">snake.html</a></li>
+       <li><a href="Ai.html">Ai.html</a></li>
     </ol>
 </body>
 
