--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@ Aden
         <li><a href="t1a07-functions-Aden.html">t1a07-functions-Aden.html</a></li>
         <li><a href="t1a08-variables-Aden.html">t1a08-variables-Aden.html</a></li>
         <li><a href="t1a09-decision-if-Aden.html">t1a09-decision-if-Aden.html</a></li>
+         <li><a href="t1a010-loops-Aden.html">t1a010-loops-Aden.html</a></li>
     </ul>
 
     <h2>X Assignments</h2>
@@ -77,7 +78,6 @@ Aden
         <li><a href="list-table.html">list-table.html</a></li>
         <li><a href="timer-time.html">timer-time.html</a></li>
         <li><a href="snake.html">snake.html</a></li>
-       <li><a href="Ai.html">Ai.html</a></li>
     </ol>
 </body>
 
